# glad

./: CMakeLists.txt  README.md
debug/include/glad/: gl.h  glad.h
debug/src/: gl.c  glad.c
release/include/glad/: gl.h  glad.h
release/src/: gl.c  glad.c
